--- a/index_2.html
+++ b/index_2.html
@@ -307,6 +307,7 @@
             </button>
         </form>
     </section>
+    </main>
 
     <footer class="page-footer">
         <ul class="footer-social-list">
@@ -343,7 +344,8 @@
             <li class="footer-social-items">
                 <a class="social" href="https://www.instagram.com">
                     <span class="visually-hidden">Инстаграм</span>
-                    <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="footer-icon" aria-hidden="true" focusable="false" width="24" height="24"
+                        viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#a)">
                             <path
                                 d="M16.5 0h-9A7.5 7.5 0 0 0 0 7.5v9A7.5 7.5 0 0 0 7.5 24h9a7.5 7.5 0 0 0 7.5-7.5v-9A7.5 7.5 0 0 0 16.5 0Zm5.25 16.5c0 2.9-2.36 5.25-5.25 5.25h-9a5.26 5.26 0 0 1-5.25-5.25v-9c0-2.9 2.36-5.25 5.25-5.25h9c2.9 0 5.25 2.36 5.25 5.25v9Z" />
@@ -352,7 +354,7 @@
                         </g>
                         <defs>
                             <clipPath id="a">
-                                <path  d="M0 0h24v24H0z" />
+                                <path d="M0 0h24v24H0z" />
                             </clipPath>
                         </defs>
                     </svg>
